# MCP-Images

./: .deploymentignore  .gitignore  AZURE_DEPLOYMENT.md  CI_CD_SETUP.md  GOOGLE_IMAGES_INTEGRATION.md  README.md  app.py  mcp_image.py  pyproject.toml  requirements.txt  startup.sh  startup.txt  startup_simple.sh  test.py  test_mcp.py  web.config
.github/workflows/: deploy-azure.yml  main_image-mcp-server.yml
