[project]
name = "mcp-image"
version = "0.1.0"
description = "MCP Image Service with Web API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.1",
    "pillow>=11.1.0",
    "azure-storage-blob>=12.26.0",
    "azure-identity>=1.24.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
]